修改个人信息和班级结构体字段内容
